fixed an overflow issue

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -13,6 +13,7 @@
         border-radius: 20px;
 
         height: 100vh;
+        overflow: hidden;
 }
 
 .header{
