--- a/src/app/components/todo/todo.component.less
+++ b/src/app/components/todo/todo.component.less
@@ -68,7 +68,7 @@
     padding-top: 3%;
     box-sizing: border-box;
     overflow-y: auto;
-    max-height: 83%; 
+    max-height: 80vh; 
 }
 
 .delete{
